# serializer version: 1
# name: test_main_all_versions
  '''
  Stub Song Title (feat. Stub Artist)
  TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist).wav
             ╷        ╷        
             │ Before │ After  
  ╶──────────┼────────┼───────╴
    duration │        │ 1.0    
    size     │        │ 42.0   
             ╵        ╵        
   Rendered in 0:00:00, a infx 
             speedup           
  
  Stub Song Title (feat. Stub Artist) (Instrumental)
  TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (Instrumental).wav
             ╷        ╷        
             │ Before │ After  
  ╶──────────┼────────┼───────╴
    duration │        │ 250.1  
    size     │        │ 1024   
             ╵        ╵        
   Rendered in 0:00:00, a infx 
             speedup           
  
  Stub Song Title (feat. Stub Artist) (DJ Instrumental)
  TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (DJ Instrumental).wav
             ╷        ╷        
             │ Before │ After  
  ╶──────────┼────────┼───────╴
    duration │        │ 1.0    
    size     │        │ 42.0   
             ╵        ╵        
   Rendered in 0:00:00, a infx 
             speedup           
  
  Stub Song Title (feat. Stub Artist) (A Cappella)
  TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (A Cappella).wav
             ╷        ╷        
             │ Before │ After  
  ╶──────────┼────────┼───────╴
    duration │        │ 250.1  
    size     │        │ 1024   
             ╵        ╵        
   Rendered in 0:00:00, a infx 
             speedup           
  
  Stub Song Title (feat. Stub Artist) (Stems)
  TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (Stems)
     ╷        ╷        
     │ Before │ After  
  ╶──┼────────┼───────╴
     ╵        ╵        
  Rendered in 0:00:00, 
     a infx speedup    
  ✓ Rendering "Stub Song Title (feat. Stub Artist)"                   0:00:00
  ✓ Rendering "Stub Song Title (feat. Stub Artist) (Instrumental)"    0:00:00
  ✓ Rendering "Stub Song Title (feat. Stub Artist) (DJ Instrumental)" 0:00:00
  ✓ Rendering "Stub Song Title (feat. Stub Artist) (A Cappella)"      0:00:00
  ✓ Rendering "Stub Song Title (feat. Stub Artist) (Stems)"           0:00:00
  
  '''
# ---
# name: test_main_all_versions.1
  _CallList([
    _Call(
      'metadata.get',
      tuple(
        'vocal-loudness-worth',
        2.0,
      ),
      dict({
      }),
    ),
    _Call(
      'metadata.get().__float__',
      tuple(
      ),
      dict({
      }),
    ),
    _Call(
      'get_info_value',
      tuple(
        'RENDER_BOUNDSFLAG',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_BOUNDSFLAG',
        0,
      ),
      dict({
      }),
    ),
    _Call(
      'get_info_value',
      tuple(
        'RENDER_STARTPOS',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_STARTPOS',
        1.0,
      ),
      dict({
      }),
    ),
    _Call(
      'get_info_value',
      tuple(
        'RENDER_ENDPOS',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_ENDPOS',
        19.5,
      ),
      dict({
      }),
    ),
    _Call(
      'get_info_string',
      tuple(
        'RENDER_PATTERN',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        'Stub Song Title (feat. Stub Artist).tmp',
      ),
      dict({
      }),
    ),
    _Call(
      'render',
      tuple(
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        'ASYNC_ITERABLE_HERE',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_ENDPOS',
        'ASYNC_ITERABLE_HERE',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_STARTPOS',
        'ASYNC_ITERABLE_HERE',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_BOUNDSFLAG',
        'ASYNC_ITERABLE_HERE',
      ),
      dict({
      }),
    ),
    _Call(
      'get_info_value',
      tuple(
        'RENDER_BOUNDSFLAG',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_BOUNDSFLAG',
        0,
      ),
      dict({
      }),
    ),
    _Call(
      'get_info_value',
      tuple(
        'RENDER_STARTPOS',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_STARTPOS',
        1.0,
      ),
      dict({
      }),
    ),
    _Call(
      'get_info_value',
      tuple(
        'RENDER_ENDPOS',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_ENDPOS',
        19.5,
      ),
      dict({
      }),
    ),
    _Call(
      'get_info_string',
      tuple(
        'RENDER_PATTERN',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        'Stub Song Title (feat. Stub Artist) (Instrumental).tmp',
      ),
      dict({
      }),
    ),
    _Call(
      'render',
      tuple(
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        'ASYNC_ITERABLE_HERE',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_ENDPOS',
        'ASYNC_ITERABLE_HERE',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_STARTPOS',
        'ASYNC_ITERABLE_HERE',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_BOUNDSFLAG',
        'ASYNC_ITERABLE_HERE',
      ),
      dict({
      }),
    ),
    _Call(
      'get_info_value',
      tuple(
        'RENDER_BOUNDSFLAG',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_BOUNDSFLAG',
        0,
      ),
      dict({
      }),
    ),
    _Call(
      'get_info_value',
      tuple(
        'RENDER_STARTPOS',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_STARTPOS',
        1.0,
      ),
      dict({
      }),
    ),
    _Call(
      'get_info_value',
      tuple(
        'RENDER_ENDPOS',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_ENDPOS',
        19.5,
      ),
      dict({
      }),
    ),
    _Call(
      'get_info_string',
      tuple(
        'RENDER_PATTERN',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        'Stub Song Title (feat. Stub Artist) (DJ Instrumental).tmp',
      ),
      dict({
      }),
    ),
    _Call(
      'render',
      tuple(
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        'ASYNC_ITERABLE_HERE',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_ENDPOS',
        'ASYNC_ITERABLE_HERE',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_STARTPOS',
        'ASYNC_ITERABLE_HERE',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_BOUNDSFLAG',
        'ASYNC_ITERABLE_HERE',
      ),
      dict({
      }),
    ),
    _Call(
      'get_info_value',
      tuple(
        'RENDER_BOUNDSFLAG',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_BOUNDSFLAG',
        0,
      ),
      dict({
      }),
    ),
    _Call(
      'get_info_value',
      tuple(
        'RENDER_STARTPOS',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_STARTPOS',
        1.0,
      ),
      dict({
      }),
    ),
    _Call(
      'get_info_value',
      tuple(
        'RENDER_ENDPOS',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_ENDPOS',
        19.5,
      ),
      dict({
      }),
    ),
    _Call(
      'get_info_string',
      tuple(
        'RENDER_PATTERN',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        'Stub Song Title (feat. Stub Artist) (A Cappella).tmp',
      ),
      dict({
      }),
    ),
    _Call(
      'render',
      tuple(
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        'ASYNC_ITERABLE_HERE',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_ENDPOS',
        'ASYNC_ITERABLE_HERE',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_STARTPOS',
        'ASYNC_ITERABLE_HERE',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_BOUNDSFLAG',
        'ASYNC_ITERABLE_HERE',
      ),
      dict({
      }),
    ),
    _Call(
      'get_info_value',
      tuple(
        'RENDER_SETTINGS',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_SETTINGS',
        144,
      ),
      dict({
      }),
    ),
    _Call(
      'get_info_value',
      tuple(
        'RENDER_BOUNDSFLAG',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_BOUNDSFLAG',
        0,
      ),
      dict({
      }),
    ),
    _Call(
      'get_info_value',
      tuple(
        'RENDER_STARTPOS',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_STARTPOS',
        1.0,
      ),
      dict({
      }),
    ),
    _Call(
      'get_info_value',
      tuple(
        'RENDER_ENDPOS',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_ENDPOS',
        19.5,
      ),
      dict({
      }),
    ),
    _Call(
      'get_info_string',
      tuple(
        'RENDER_PATTERN',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        'Stub Song Title (feat. Stub Artist) (Stems).tmp/$folders $tracknumber - $track',
      ),
      dict({
      }),
    ),
    _Call(
      'render',
      tuple(
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        'ASYNC_ITERABLE_HERE',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_ENDPOS',
        'ASYNC_ITERABLE_HERE',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_STARTPOS',
        'ASYNC_ITERABLE_HERE',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_BOUNDSFLAG',
        'ASYNC_ITERABLE_HERE',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_value',
      tuple(
        'RENDER_SETTINGS',
        'ASYNC_ITERABLE_HERE',
      ),
      dict({
      }),
    ),
    _Call(
      'save',
      tuple(
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_main_all_versions.2
  _CallList([
    _Call(
      '',
      tuple(
        list([
          'ffmpeg',
          '-i',
          'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist).wav',
          '-filter:a',
          'volumedetect,ebur128=framelog=verbose',
          '-hide_banner',
          '-nostats',
          '-f',
          'null',
          '/dev/null',
        ]),
      ),
      dict({
        'check': True,
        'stderr': -1,
        'text': True,
      }),
    ),
    _Call(
      '',
      tuple(
        list([
          'ffmpeg',
          '-i',
          'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (Instrumental).wav',
          '-filter:a',
          'volumedetect,ebur128=framelog=verbose',
          '-hide_banner',
          '-nostats',
          '-f',
          'null',
          '/dev/null',
        ]),
      ),
      dict({
        'check': True,
        'stderr': -1,
        'text': True,
      }),
    ),
    _Call(
      '',
      tuple(
        list([
          'ffmpeg',
          '-i',
          'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (DJ Instrumental).wav',
          '-filter:a',
          'volumedetect,ebur128=framelog=verbose',
          '-hide_banner',
          '-nostats',
          '-f',
          'null',
          '/dev/null',
        ]),
      ),
      dict({
        'check': True,
        'stderr': -1,
        'text': True,
      }),
    ),
    _Call(
      '',
      tuple(
        list([
          'ffmpeg',
          '-i',
          'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (A Cappella).wav',
          '-filter:a',
          'areverse,atrim=start=0.2,silenceremove=start_periods=1:start_silence=3.0:start_threshold=0.02,areverse,atrim=start=0.2,silenceremove=start_periods=1:start_silence=1.0:start_threshold=0.02',
          'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (A Cappella).wav.tmp.wav',
        ]),
      ),
      dict({
        'check': True,
        'stderr': -1,
        'text': True,
      }),
    ),
    _Call(
      '',
      tuple(
        list([
          'ffmpeg',
          '-i',
          'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (A Cappella).wav',
          '-filter:a',
          'volumedetect,ebur128=framelog=verbose',
          '-hide_banner',
          '-nostats',
          '-f',
          'null',
          '/dev/null',
        ]),
      ),
      dict({
        'check': True,
        'stderr': -1,
        'text': True,
      }),
    ),
  ])
# ---
# name: test_main_default_versions
  tuple(
    None,
    '''
      Stub Song Title (feat. Stub Artist)
      TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist).wav
                 ╷        ╷        
                 │ Before │ After  
      ╶──────────┼────────┼───────╴
        duration │        │ 1.0    
        size     │        │ 42.0   
                 ╵        ╵        
       Rendered in 0:00:00, a infx 
                 speedup           
      
      Stub Song Title (feat. Stub Artist) (Instrumental)
      TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (Instrumental).wav
                 ╷        ╷        
                 │ Before │ After  
      ╶──────────┼────────┼───────╴
        duration │        │ 250.1  
        size     │        │ 1024   
                 ╵        ╵        
       Rendered in 0:00:00, a infx 
                 speedup           
      
      Stub Song Title (feat. Stub Artist) (A Cappella)
      TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (A Cappella).wav
                 ╷        ╷        
                 │ Before │ After  
      ╶──────────┼────────┼───────╴
        duration │        │ 1.0    
        size     │        │ 42.0   
                 ╵        ╵        
       Rendered in 0:00:00, a infx 
                 speedup           
      ✓ Rendering "Stub Song Title (feat. Stub Artist)"                0:00:00
      ✓ Rendering "Stub Song Title (feat. Stub Artist) (Instrumental)" 0:00:00
      ✓ Rendering "Stub Song Title (feat. Stub Artist) (A Cappella)"   0:00:00
  
    ''',
    '',
    _CallList([
      _Call(
        'metadata.get',
        tuple(
          'vocal-loudness-worth',
          2.0,
        ),
        dict({
        }),
      ),
      _Call(
        'metadata.get().__float__',
        tuple(
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_STARTPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          1.0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_ENDPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          19.5,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_string',
        tuple(
          'RENDER_PATTERN',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'Stub Song Title (feat. Stub Artist).tmp',
        ),
        dict({
        }),
      ),
      _Call(
        'render',
        tuple(
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_STARTPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          1.0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_ENDPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          19.5,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_string',
        tuple(
          'RENDER_PATTERN',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'Stub Song Title (feat. Stub Artist) (Instrumental).tmp',
        ),
        dict({
        }),
      ),
      _Call(
        'render',
        tuple(
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_STARTPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          1.0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_ENDPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          19.5,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_string',
        tuple(
          'RENDER_PATTERN',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'Stub Song Title (feat. Stub Artist) (A Cappella).tmp',
        ),
        dict({
        }),
      ),
      _Call(
        'render',
        tuple(
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'save',
        tuple(
        ),
        dict({
        }),
      ),
    ]),
    _CallList([
      _Call(
        '',
        tuple(
          list([
            'ffmpeg',
            '-i',
            'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist).wav',
            '-filter:a',
            'volumedetect,ebur128=framelog=verbose',
            '-hide_banner',
            '-nostats',
            '-f',
            'null',
            '/dev/null',
          ]),
        ),
        dict({
          'check': True,
          'stderr': -1,
          'text': True,
        }),
      ),
      _Call(
        '',
        tuple(
          list([
            'ffmpeg',
            '-i',
            'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (Instrumental).wav',
            '-filter:a',
            'volumedetect,ebur128=framelog=verbose',
            '-hide_banner',
            '-nostats',
            '-f',
            'null',
            '/dev/null',
          ]),
        ),
        dict({
          'check': True,
          'stderr': -1,
          'text': True,
        }),
      ),
      _Call(
        '',
        tuple(
          list([
            'ffmpeg',
            '-i',
            'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (A Cappella).wav',
            '-filter:a',
            'areverse,atrim=start=0.2,silenceremove=start_periods=1:start_silence=3.0:start_threshold=0.02,areverse,atrim=start=0.2,silenceremove=start_periods=1:start_silence=1.0:start_threshold=0.02',
            'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (A Cappella).wav.tmp.wav',
          ]),
        ),
        dict({
          'check': True,
          'stderr': -1,
          'text': True,
        }),
      ),
      _Call(
        '',
        tuple(
          list([
            'ffmpeg',
            '-i',
            'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (A Cappella).wav',
            '-filter:a',
            'volumedetect,ebur128=framelog=verbose',
            '-hide_banner',
            '-nostats',
            '-f',
            'null',
            '/dev/null',
          ]),
        ),
        dict({
          'check': True,
          'stderr': -1,
          'text': True,
        }),
      ),
    ]),
  )
# ---
# name: test_main_default_versions_dry_run
  tuple(
    None,
    '''
      Stub Song Title (feat. Stub Artist)
      TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist).tmp.wav
                 ╷        ╷        
                 │ Before │ After  
      ╶──────────┼────────┼───────╴
        duration │        │ 1.0    
        size     │        │ 42.0   
                 ╵        ╵        
       Rendered in 0:00:00, a infx 
                 speedup           
      
      Stub Song Title (feat. Stub Artist) (Instrumental)
      TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (Instrumental).tmp.wav
                 ╷        ╷        
                 │ Before │ After  
      ╶──────────┼────────┼───────╴
        duration │        │ 250.1  
        size     │        │ 1024   
                 ╵        ╵        
       Rendered in 0:00:00, a infx 
                 speedup           
      
      Stub Song Title (feat. Stub Artist) (A Cappella)
      TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (A Cappella).tmp.wav
                 ╷        ╷        
                 │ Before │ After  
      ╶──────────┼────────┼───────╴
        duration │        │ 1.0    
        size     │        │ 42.0   
                 ╵        ╵        
       Rendered in 0:00:00, a infx 
                 speedup           
      ✓ Rendering "Stub Song Title (feat. Stub Artist)"                0:00:00
      ✓ Rendering "Stub Song Title (feat. Stub Artist) (Instrumental)" 0:00:00
      ✓ Rendering "Stub Song Title (feat. Stub Artist) (A Cappella)"   0:00:00
  
    ''',
    '',
    _CallList([
      _Call(
        'metadata.get',
        tuple(
          'vocal-loudness-worth',
          2.0,
        ),
        dict({
        }),
      ),
      _Call(
        'metadata.get().__float__',
        tuple(
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_STARTPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          1.0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_ENDPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          19.5,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_string',
        tuple(
          'RENDER_PATTERN',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'Stub Song Title (feat. Stub Artist).tmp',
        ),
        dict({
        }),
      ),
      _Call(
        'render',
        tuple(
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_STARTPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          1.0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_ENDPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          19.5,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_string',
        tuple(
          'RENDER_PATTERN',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'Stub Song Title (feat. Stub Artist) (Instrumental).tmp',
        ),
        dict({
        }),
      ),
      _Call(
        'render',
        tuple(
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_STARTPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          1.0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_ENDPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          19.5,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_string',
        tuple(
          'RENDER_PATTERN',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'Stub Song Title (feat. Stub Artist) (A Cappella).tmp',
        ),
        dict({
        }),
      ),
      _Call(
        'render',
        tuple(
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'save',
        tuple(
        ),
        dict({
        }),
      ),
    ]),
    _CallList([
      _Call(
        '',
        tuple(
          list([
            'ffmpeg',
            '-i',
            'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist).tmp.wav',
            '-filter:a',
            'volumedetect,ebur128=framelog=verbose',
            '-hide_banner',
            '-nostats',
            '-f',
            'null',
            '/dev/null',
          ]),
        ),
        dict({
          'check': True,
          'stderr': -1,
          'text': True,
        }),
      ),
      _Call(
        '',
        tuple(
          list([
            'ffmpeg',
            '-i',
            'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (Instrumental).tmp.wav',
            '-filter:a',
            'volumedetect,ebur128=framelog=verbose',
            '-hide_banner',
            '-nostats',
            '-f',
            'null',
            '/dev/null',
          ]),
        ),
        dict({
          'check': True,
          'stderr': -1,
          'text': True,
        }),
      ),
      _Call(
        '',
        tuple(
          list([
            'ffmpeg',
            '-i',
            'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (A Cappella).tmp.wav',
            '-filter:a',
            'volumedetect,ebur128=framelog=verbose',
            '-hide_banner',
            '-nostats',
            '-f',
            'null',
            '/dev/null',
          ]),
        ),
        dict({
          'check': True,
          'stderr': -1,
          'text': True,
        }),
      ),
      _Call(
        '',
        tuple(
          list([
            'ffmpeg',
            '-i',
            'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (A Cappella).tmp.wav',
            '-filter:a',
            'areverse,atrim=start=0.2,silenceremove=start_periods=1:start_silence=3.0:start_threshold=0.02,areverse,atrim=start=0.2,silenceremove=start_periods=1:start_silence=1.0:start_threshold=0.02',
            'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (A Cappella).tmp.wav.tmp.wav',
          ]),
        ),
        dict({
          'check': True,
          'stderr': -1,
          'text': True,
        }),
      ),
    ]),
  )
# ---
# name: test_main_filenames_all_versions
  tuple(
    None,
    '''
      Stub Song Title (feat. Stub Artist)
      TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist).wav
                 ╷        ╷        
                 │ Before │ After  
      ╶──────────┼────────┼───────╴
        duration │        │ 1.0    
        size     │        │ 42.0   
                 ╵        ╵        
       Rendered in 0:00:00, a infx 
                 speedup           
      
      Stub Song Title (feat. Stub Artist) (Instrumental)
      TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (Instrumental).wav
                 ╷        ╷        
                 │ Before │ After  
      ╶──────────┼────────┼───────╴
        duration │        │ 250.1  
        size     │        │ 1024   
                 ╵        ╵        
       Rendered in 0:00:00, a infx 
                 speedup           
      
      Stub Song Title (feat. Stub Artist) (DJ Instrumental)
      TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (DJ Instrumental).wav
                 ╷        ╷        
                 │ Before │ After  
      ╶──────────┼────────┼───────╴
        duration │        │ 1.0    
        size     │        │ 42.0   
                 ╵        ╵        
       Rendered in 0:00:00, a infx 
                 speedup           
      
      Stub Song Title (feat. Stub Artist) (A Cappella)
      TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (A Cappella).wav
                 ╷        ╷        
                 │ Before │ After  
      ╶──────────┼────────┼───────╴
        duration │        │ 250.1  
        size     │        │ 1024   
                 ╵        ╵        
       Rendered in 0:00:00, a infx 
                 speedup           
      
      Stub Song Title (feat. Stub Artist) (Stems)
      TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (Stems)
         ╷        ╷        
         │ Before │ After  
      ╶──┼────────┼───────╴
         ╵        ╵        
      Rendered in 0:00:00, 
         a infx speedup    
      Stub Song Title (feat. Stub Artist)
      TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist).wav
                 ╷        ╷        
                 │ Before │ After  
      ╶──────────┼────────┼───────╴
        duration │ 1.0    │ 250.1  
        size     │ 42.0   │ 1024   
                 ╵        ╵        
       Rendered in 0:00:00, a infx 
                 speedup           
      
      Stub Song Title (feat. Stub Artist) (Instrumental)
      TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (Instrumental).wav
                 ╷        ╷        
                 │ Before │ After  
      ╶──────────┼────────┼───────╴
        duration │ 1.0    │ 250.1  
        size     │ 42.0   │ 1024   
                 ╵        ╵        
       Rendered in 0:00:00, a infx 
                 speedup           
      
      Stub Song Title (feat. Stub Artist) (DJ Instrumental)
      TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (DJ Instrumental).wav
                 ╷        ╷        
                 │ Before │ After  
      ╶──────────┼────────┼───────╴
        duration │ 1.0    │ 250.1  
        size     │ 42.0   │ 1024   
                 ╵        ╵        
       Rendered in 0:00:00, a infx 
                 speedup           
      
      Stub Song Title (feat. Stub Artist) (A Cappella)
      TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (A Cappella).wav
                 ╷        ╷        
                 │ Before │ After  
      ╶──────────┼────────┼───────╴
        duration │ 1.0    │ 250.1  
        size     │ 42.0   │ 1024   
                 ╵        ╵        
       Rendered in 0:00:00, a infx 
                 speedup           
      
      Stub Song Title (feat. Stub Artist) (Stems)
      TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (Stems)
         ╷        ╷        
         │ Before │ After  
      ╶──┼────────┼───────╴
         ╵        ╵        
      Rendered in 0:00:00, 
         a infx speedup    
      ✓ Rendering "Stub Song Title (feat. Stub Artist)"                   0:00:00
      ✓ Rendering "Stub Song Title (feat. Stub Artist) (Instrumental)"    0:00:00
      ✓ Rendering "Stub Song Title (feat. Stub Artist) (DJ Instrumental)" 0:00:00
      ✓ Rendering "Stub Song Title (feat. Stub Artist) (A Cappella)"      0:00:00
      ✓ Rendering "Stub Song Title (feat. Stub Artist) (Stems)"           0:00:00
      ✓ Rendering "Stub Song Title (feat. Stub Artist)"                   0:00:00
      ✓ Rendering "Stub Song Title (feat. Stub Artist) (Instrumental)"    0:00:00
      ✓ Rendering "Stub Song Title (feat. Stub Artist) (DJ Instrumental)" 0:00:00
      ✓ Rendering "Stub Song Title (feat. Stub Artist) (A Cappella)"      0:00:00
      ✓ Rendering "Stub Song Title (feat. Stub Artist) (Stems)"           0:00:00
  
    ''',
    '',
    _CallList([
      _Call(
        'metadata.get',
        tuple(
          'vocal-loudness-worth',
          2.0,
        ),
        dict({
        }),
      ),
      _Call(
        'metadata.get().__float__',
        tuple(
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_STARTPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          1.0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_ENDPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          19.5,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_string',
        tuple(
          'RENDER_PATTERN',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'Stub Song Title (feat. Stub Artist).tmp',
        ),
        dict({
        }),
      ),
      _Call(
        'render',
        tuple(
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_STARTPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          1.0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_ENDPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          19.5,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_string',
        tuple(
          'RENDER_PATTERN',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'Stub Song Title (feat. Stub Artist) (Instrumental).tmp',
        ),
        dict({
        }),
      ),
      _Call(
        'render',
        tuple(
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_STARTPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          1.0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_ENDPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          19.5,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_string',
        tuple(
          'RENDER_PATTERN',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'Stub Song Title (feat. Stub Artist) (DJ Instrumental).tmp',
        ),
        dict({
        }),
      ),
      _Call(
        'render',
        tuple(
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_STARTPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          1.0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_ENDPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          19.5,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_string',
        tuple(
          'RENDER_PATTERN',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'Stub Song Title (feat. Stub Artist) (A Cappella).tmp',
        ),
        dict({
        }),
      ),
      _Call(
        'render',
        tuple(
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_SETTINGS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_SETTINGS',
          144,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_STARTPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          1.0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_ENDPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          19.5,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_string',
        tuple(
          'RENDER_PATTERN',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'Stub Song Title (feat. Stub Artist) (Stems).tmp/$folders $tracknumber - $track',
        ),
        dict({
        }),
      ),
      _Call(
        'render',
        tuple(
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_SETTINGS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'save',
        tuple(
        ),
        dict({
        }),
      ),
      _Call(
        'metadata.get',
        tuple(
          'vocal-loudness-worth',
          2.0,
        ),
        dict({
        }),
      ),
      _Call(
        'metadata.get().__float__',
        tuple(
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_STARTPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          1.0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_ENDPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          19.5,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_string',
        tuple(
          'RENDER_PATTERN',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'Stub Song Title (feat. Stub Artist).tmp',
        ),
        dict({
        }),
      ),
      _Call(
        'render',
        tuple(
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_STARTPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          1.0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_ENDPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          19.5,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_string',
        tuple(
          'RENDER_PATTERN',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'Stub Song Title (feat. Stub Artist) (Instrumental).tmp',
        ),
        dict({
        }),
      ),
      _Call(
        'render',
        tuple(
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_STARTPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          1.0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_ENDPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          19.5,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_string',
        tuple(
          'RENDER_PATTERN',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'Stub Song Title (feat. Stub Artist) (DJ Instrumental).tmp',
        ),
        dict({
        }),
      ),
      _Call(
        'render',
        tuple(
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_STARTPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          1.0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_ENDPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          19.5,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_string',
        tuple(
          'RENDER_PATTERN',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'Stub Song Title (feat. Stub Artist) (A Cappella).tmp',
        ),
        dict({
        }),
      ),
      _Call(
        'render',
        tuple(
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_SETTINGS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_SETTINGS',
          144,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_STARTPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          1.0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_ENDPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          19.5,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_string',
        tuple(
          'RENDER_PATTERN',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'Stub Song Title (feat. Stub Artist) (Stems).tmp/$folders $tracknumber - $track',
        ),
        dict({
        }),
      ),
      _Call(
        'render',
        tuple(
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_SETTINGS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'save',
        tuple(
        ),
        dict({
        }),
      ),
    ]),
    _CallList([
      _Call(
        '',
        tuple(
          list([
            'ffmpeg',
            '-i',
            'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist).wav',
            '-filter:a',
            'volumedetect,ebur128=framelog=verbose',
            '-hide_banner',
            '-nostats',
            '-f',
            'null',
            '/dev/null',
          ]),
        ),
        dict({
          'check': True,
          'stderr': -1,
          'text': True,
        }),
      ),
      _Call(
        '',
        tuple(
          list([
            'ffmpeg',
            '-i',
            'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (Instrumental).wav',
            '-filter:a',
            'volumedetect,ebur128=framelog=verbose',
            '-hide_banner',
            '-nostats',
            '-f',
            'null',
            '/dev/null',
          ]),
        ),
        dict({
          'check': True,
          'stderr': -1,
          'text': True,
        }),
      ),
      _Call(
        '',
        tuple(
          list([
            'ffmpeg',
            '-i',
            'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (DJ Instrumental).wav',
            '-filter:a',
            'volumedetect,ebur128=framelog=verbose',
            '-hide_banner',
            '-nostats',
            '-f',
            'null',
            '/dev/null',
          ]),
        ),
        dict({
          'check': True,
          'stderr': -1,
          'text': True,
        }),
      ),
      _Call(
        '',
        tuple(
          list([
            'ffmpeg',
            '-i',
            'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (A Cappella).wav',
            '-filter:a',
            'areverse,atrim=start=0.2,silenceremove=start_periods=1:start_silence=3.0:start_threshold=0.02,areverse,atrim=start=0.2,silenceremove=start_periods=1:start_silence=1.0:start_threshold=0.02',
            'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (A Cappella).wav.tmp.wav',
          ]),
        ),
        dict({
          'check': True,
          'stderr': -1,
          'text': True,
        }),
      ),
      _Call(
        '',
        tuple(
          list([
            'ffmpeg',
            '-i',
            'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (A Cappella).wav',
            '-filter:a',
            'volumedetect,ebur128=framelog=verbose',
            '-hide_banner',
            '-nostats',
            '-f',
            'null',
            '/dev/null',
          ]),
        ),
        dict({
          'check': True,
          'stderr': -1,
          'text': True,
        }),
      ),
      _Call(
        '',
        tuple(
          list([
            'ffmpeg',
            '-i',
            'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist).wav',
            '-filter:a',
            'volumedetect,ebur128=framelog=verbose',
            '-hide_banner',
            '-nostats',
            '-f',
            'null',
            '/dev/null',
          ]),
        ),
        dict({
          'check': True,
          'stderr': -1,
          'text': True,
        }),
      ),
      _Call(
        '',
        tuple(
          list([
            'ffmpeg',
            '-i',
            'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist).wav',
            '-filter:a',
            'volumedetect,ebur128=framelog=verbose',
            '-hide_banner',
            '-nostats',
            '-f',
            'null',
            '/dev/null',
          ]),
        ),
        dict({
          'check': True,
          'stderr': -1,
          'text': True,
        }),
      ),
      _Call(
        '',
        tuple(
          list([
            'ffmpeg',
            '-i',
            'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (Instrumental).wav',
            '-filter:a',
            'volumedetect,ebur128=framelog=verbose',
            '-hide_banner',
            '-nostats',
            '-f',
            'null',
            '/dev/null',
          ]),
        ),
        dict({
          'check': True,
          'stderr': -1,
          'text': True,
        }),
      ),
      _Call(
        '',
        tuple(
          list([
            'ffmpeg',
            '-i',
            'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (Instrumental).wav',
            '-filter:a',
            'volumedetect,ebur128=framelog=verbose',
            '-hide_banner',
            '-nostats',
            '-f',
            'null',
            '/dev/null',
          ]),
        ),
        dict({
          'check': True,
          'stderr': -1,
          'text': True,
        }),
      ),
      _Call(
        '',
        tuple(
          list([
            'ffmpeg',
            '-i',
            'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (DJ Instrumental).wav',
            '-filter:a',
            'volumedetect,ebur128=framelog=verbose',
            '-hide_banner',
            '-nostats',
            '-f',
            'null',
            '/dev/null',
          ]),
        ),
        dict({
          'check': True,
          'stderr': -1,
          'text': True,
        }),
      ),
      _Call(
        '',
        tuple(
          list([
            'ffmpeg',
            '-i',
            'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (DJ Instrumental).wav',
            '-filter:a',
            'volumedetect,ebur128=framelog=verbose',
            '-hide_banner',
            '-nostats',
            '-f',
            'null',
            '/dev/null',
          ]),
        ),
        dict({
          'check': True,
          'stderr': -1,
          'text': True,
        }),
      ),
      _Call(
        '',
        tuple(
          list([
            'ffmpeg',
            '-i',
            'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (A Cappella).wav',
            '-filter:a',
            'volumedetect,ebur128=framelog=verbose',
            '-hide_banner',
            '-nostats',
            '-f',
            'null',
            '/dev/null',
          ]),
        ),
        dict({
          'check': True,
          'stderr': -1,
          'text': True,
        }),
      ),
      _Call(
        '',
        tuple(
          list([
            'ffmpeg',
            '-i',
            'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (A Cappella).wav',
            '-filter:a',
            'areverse,atrim=start=0.2,silenceremove=start_periods=1:start_silence=3.0:start_threshold=0.02,areverse,atrim=start=0.2,silenceremove=start_periods=1:start_silence=1.0:start_threshold=0.02',
            'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (A Cappella).wav.tmp.wav',
          ]),
        ),
        dict({
          'check': True,
          'stderr': -1,
          'text': True,
        }),
      ),
      _Call(
        '',
        tuple(
          list([
            'ffmpeg',
            '-i',
            'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (A Cappella).wav',
            '-filter:a',
            'volumedetect,ebur128=framelog=verbose',
            '-hide_banner',
            '-nostats',
            '-f',
            'null',
            '/dev/null',
          ]),
        ),
        dict({
          'check': True,
          'stderr': -1,
          'text': True,
        }),
      ),
    ]),
  )
# ---
# name: test_main_instrumental_versions_only_main_vocals
  tuple(
    None,
    '''
      Stub Song Title (feat. Stub Artist) (Instrumental)
      TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (Instrumental).wav
                 ╷        ╷        
                 │ Before │ After  
      ╶──────────┼────────┼───────╴
        duration │        │ 1.0    
        size     │        │ 42.0   
                 ╵        ╵        
       Rendered in 0:00:00, a infx 
                 speedup           
      ✓ Rendering "Stub Song Title (feat. Stub Artist) (Instrumental)" 0:00:00
  
    ''',
    '',
    _CallList([
      _Call(
        'metadata.get',
        tuple(
          'vocal-loudness-worth',
          2.0,
        ),
        dict({
        }),
      ),
      _Call(
        'metadata.get().__float__',
        tuple(
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_STARTPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          1.0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_ENDPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          19.5,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_string',
        tuple(
          'RENDER_PATTERN',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'Stub Song Title (feat. Stub Artist) (Instrumental).tmp',
        ),
        dict({
        }),
      ),
      _Call(
        'render',
        tuple(
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'save',
        tuple(
        ),
        dict({
        }),
      ),
    ]),
    _CallList([
      _Call(
        '',
        tuple(
          list([
            'ffmpeg',
            '-i',
            'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (Instrumental).wav',
            '-filter:a',
            'volumedetect,ebur128=framelog=verbose',
            '-hide_banner',
            '-nostats',
            '-f',
            'null',
            '/dev/null',
          ]),
        ),
        dict({
          'check': True,
          'stderr': -1,
          'text': True,
        }),
      ),
    ]),
  )
# ---
# name: test_main_main_version
  tuple(
    None,
    '''
      Stub Song Title (feat. Stub Artist)
      TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist).wav
                 ╷        ╷        
                 │ Before │ After  
      ╶──────────┼────────┼───────╴
        duration │        │ 1.0    
        size     │        │ 42.0   
                 ╵        ╵        
       Rendered in 0:00:00, a infx 
                 speedup           
      ✓ Rendering "Stub Song Title (feat. Stub Artist)" 0:00:00
  
    ''',
    '',
    _CallList([
      _Call(
        'metadata.get',
        tuple(
          'vocal-loudness-worth',
          2.0,
        ),
        dict({
        }),
      ),
      _Call(
        'metadata.get().__float__',
        tuple(
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_STARTPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          1.0,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_value',
        tuple(
          'RENDER_ENDPOS',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          19.5,
        ),
        dict({
        }),
      ),
      _Call(
        'get_info_string',
        tuple(
          'RENDER_PATTERN',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'Stub Song Title (feat. Stub Artist).tmp',
        ),
        dict({
        }),
      ),
      _Call(
        'render',
        tuple(
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_ENDPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_STARTPOS',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_value',
        tuple(
          'RENDER_BOUNDSFLAG',
          'ASYNC_ITERABLE_HERE',
        ),
        dict({
        }),
      ),
      _Call(
        'save',
        tuple(
        ),
        dict({
        }),
      ),
    ]),
    _CallList([
      _Call(
        '',
        tuple(
          list([
            'ffmpeg',
            '-i',
            'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist).wav',
            '-filter:a',
            'volumedetect,ebur128=framelog=verbose',
            '-hide_banner',
            '-nostats',
            '-f',
            'null',
            '/dev/null',
          ]),
        ),
        dict({
          'check': True,
          'stderr': -1,
          'text': True,
        }),
      ),
    ]),
  )
# ---
# name: test_main_mocked_calls
  tuple(
    None,
    '''
      Stub Song Title (feat. Stub Artist)
      TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist).wav
                 ╷        ╷        
                 │ Before │ After  
      ╶──────────┼────────┼───────╴
        duration │        │ 1.0    
        size     │        │ 42.0   
                 ╵        ╵        
       Rendered in 0:00:00, a infx 
                 speedup           
      ✓ Rendering "Stub Song Title (feat. Stub Artist)" 0:00:00
  
    ''',
    '',
    dict({
      'duration_delta': _CallList([
      ]),
      'get_int_config_var': _CallList([
        _Call(
          '',
          tuple(
            'offlineinact',
            -666,
          ),
          dict({
          }),
        ),
        _Call(
          '',
          tuple(
            'runallonstop',
            -666,
          ),
          dict({
          }),
        ),
        _Call(
          '',
          tuple(
            'runafterstop',
            -666,
          ),
          dict({
          }),
        ),
      ]),
      'inside_reaper': _CallList([
        _Call(
          '',
          tuple(
          ),
          dict({
          }),
        ),
        _Call(
          '().__enter__',
          tuple(
          ),
          dict({
          }),
        ),
        _Call(
          '().__exit__',
          tuple(
            None,
            None,
            None,
          ),
          dict({
          }),
        ),
      ]),
      'project': _CallList([
        _Call(
          'metadata.get',
          tuple(
            'vocal-loudness-worth',
            2.0,
          ),
          dict({
          }),
        ),
        _Call(
          'metadata.get().__float__',
          tuple(
          ),
          dict({
          }),
        ),
        _Call(
          'get_info_value',
          tuple(
            'RENDER_BOUNDSFLAG',
          ),
          dict({
          }),
        ),
        _Call(
          'set_info_value',
          tuple(
            'RENDER_BOUNDSFLAG',
            0,
          ),
          dict({
          }),
        ),
        _Call(
          'get_info_value',
          tuple(
            'RENDER_STARTPOS',
          ),
          dict({
          }),
        ),
        _Call(
          'set_info_value',
          tuple(
            'RENDER_STARTPOS',
            1.0,
          ),
          dict({
          }),
        ),
        _Call(
          'get_info_value',
          tuple(
            'RENDER_ENDPOS',
          ),
          dict({
          }),
        ),
        _Call(
          'set_info_value',
          tuple(
            'RENDER_ENDPOS',
            19.5,
          ),
          dict({
          }),
        ),
        _Call(
          'get_info_string',
          tuple(
            'RENDER_PATTERN',
          ),
          dict({
          }),
        ),
        _Call(
          'set_info_string',
          tuple(
            'RENDER_PATTERN',
            'Stub Song Title (feat. Stub Artist).tmp',
          ),
          dict({
          }),
        ),
        _Call(
          'render',
          tuple(
          ),
          dict({
          }),
        ),
        _Call(
          'set_info_string',
          tuple(
            'RENDER_PATTERN',
            'ASYNC_ITERABLE_HERE',
          ),
          dict({
          }),
        ),
        _Call(
          'set_info_value',
          tuple(
            'RENDER_ENDPOS',
            'ASYNC_ITERABLE_HERE',
          ),
          dict({
          }),
        ),
        _Call(
          'set_info_value',
          tuple(
            'RENDER_STARTPOS',
            'ASYNC_ITERABLE_HERE',
          ),
          dict({
          }),
        ),
        _Call(
          'set_info_value',
          tuple(
            'RENDER_BOUNDSFLAG',
            'ASYNC_ITERABLE_HERE',
          ),
          dict({
          }),
        ),
        _Call(
          'save',
          tuple(
          ),
          dict({
          }),
        ),
      ]),
      'set_int_config_var': _CallList([
        _Call(
          '',
          tuple(
            'runallonstop',
            0,
          ),
          dict({
          }),
        ),
        _Call(
          '',
          tuple(
            'runafterstop',
            0,
          ),
          dict({
          }),
        ),
        _Call(
          '',
          tuple(
            'runafterstop',
            999,
          ),
          dict({
          }),
        ),
        _Call(
          '',
          tuple(
            'runallonstop',
            999,
          ),
          dict({
          }),
        ),
      ]),
      'upload': _CallList([
        _Call(
          '',
          tuple(
            'CLIENT_SESSION_HERE',
            'stub-fake-token',
            dict({
              'X-Test-Additional-Header': '1',
            }),
            list([
              'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist) (Instrumental).wav',
            ]),
          ),
          dict({
          }),
        ),
        _Call(
          '',
          tuple(
            'CLIENT_SESSION_HERE',
            'stub-fake-token',
            dict({
              'X-Test-Additional-Header': '1',
            }),
            list([
              'TMP_PATH_HERE/Stub Song Title (feat. Stub Artist)/Stub Song Title (feat. Stub Artist).wav',
            ]),
          ),
          dict({
          }),
        ),
      ]),
    }),
  )
# ---
# name: test_main_noop
  tuple(
    2,
    '',
    '''
      Error: nothing to render
  
    ''',
    _CallList([
      _Call(
        'metadata.get',
        tuple(
          'vocal-loudness-worth',
          2.0,
        ),
        dict({
        }),
      ),
      _Call(
        'metadata.get().__float__',
        tuple(
        ),
        dict({
        }),
      ),
    ]),
  )
# ---
# name: test_render_result_render_speedup
  _CallList([
    _Call(
      '',
      tuple(
        list([
          'ffprobe',
          '-i',
          'TMP_PATH_HERE/foo.wav',
          '-show_entries',
          'format=duration',
        ]),
      ),
      dict({
        'capture_output': True,
        'check': True,
        'text': True,
      }),
    ),
  ])
# ---
